# executable-knowledge-lifecycles

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: adversarial-case.yml  config.yml  reproduction.yml
artifacts/: SHA256SUMS  release_manifest.json
huggingface/dataset/: 1a_1b_metrics.json  1c_evaluation.json  README.md  benchmark.jsonl  parameter_sensitivity.json
huggingface/space/: README.md  index.html
paper/: Makefile  README.md  generated_domain_table.tex  generated_metrics.tex  generated_release.tex  generated_results_table.tex  main.tex
schemas/: audit_event.schema.json  causal_claim.schema.json
scripts/: audit_paper.py  build_paper_fallback.py  build_release_bundle.py  export_huggingface_dataset.py  freeze_release.py  generate_paper_metrics.py  generate_release_checksums.py  reproduce_and_compile.sh
src/agent_dynamics/: __init__.py  benchmark_cases.py  compilation_metrics.py  compiler.py  experiment.py  losses.py  stress_test.py  system.py
tests/: test_compilation.py  test_experiment.py  test_fault_injection.py  test_invariants.py  test_loss.py  test_paper.py  test_schemas.py
